<resources>
    <string name="app_name">Трекер привычек</string>
    <string name="app_name_with_line_break">Трекер \nпривычек</string>
    <string name="avatar_description">avatar</string>

    <string name="label_main">Мои привычки</string>
    <string name="label_about">О нас</string>

    <string name="habits_list_no_bad_habits">У вас ещё нет вредных привычек</string>
    <string name="habits_list_no_good_habits">У вас ещё нет полезных привычек</string>
    <string name="habits_list_add_habit_button">Добавить привычку</string>
    <string name="bad_habits_title">Вредные</string>
    <string name="good_habits_title">Полезные</string>

    <string name="habit_card_repeat_icon">Иконка повторения</string>

    <string name="high_priority">Очень важно</string>
    <string name="medium_priority">Достаточно важно</string>
    <string name="low_priority">Не очень важно</string>

    <string name="bad_habit">Вредная</string>
    <string name="good_habit">Полезная</string>

    <string name="day">день</string>
    <string name="week">неделю</string>
    <string name="month">месяц</string>
    <string name="quarter">квартал</string>
    <string name="year">год</string>
    <string name="never">Никогда</string>
    <string name="every_day">Ежедневно</string>

    <plurals name="times">
        <item quantity="zero">раз в</item>
        <item quantity="one">раз в</item>
        <item quantity="many">раз в</item>
        <item quantity="few">раза в</item>
    </plurals>

    <string name="edit_habit_exit_button">Отменить</string>
    <string name="edit_habit_save_button">Сохранить</string>
    <string name="edit_habit_title_hint">Название</string>
    <string name="edit_habit_title_required">Обязательное поле</string>
    <string name="edit_habit_type_section_icon">Иконка большие пальцы вверх и вниз</string>
    <string name="edit_habit_priority_section_icon">Иконка приоритеты</string>
    <string name="edit_habit_repeat_icon">Иконка повторения</string>
    <string name="edit_habit_arrow_drop_down_icon">Иконка стрелка вниз</string>
    <string name="edit_habit_repeat_text">Повторять</string>
    <string name="edit_habit_allowed_text">Допускается</string>
    <string name="edit_habit_repeat_times_default_value">1</string>
    <string name="edit_habit_times_default_value">раз в</string>
    <string name="edit_habit_color_default_value">Цвет по умолчанию</string>
    <string name="edit_habit_description_icon">Иконка описания</string>
    <string name="edit_habit_description_hint">Добавьте описание</string>
    <string name="edit_habit_delete_button">Удалить</string>

    <string name="color_picker_selected_color">Выбранный цвет</string>
    <string name="color_picker_rgb">RGB</string>
    <string name="color_picker_hsv">HSV</string>
    <string name="color_picker_hex">HEX</string>
    <string name="color_picker_default_color_button">Вернуться к цвету по умолчанию</string>
    <string name="color_picker_save_button">Сохранить</string>

    <string name="about_app_good_habits">Следите за соблюдением полезных привычек</string>
    <string name="about_app_bad_habits">и отказывайтесь от вредных</string>
    <string name="about_app_the_end">вместе с нашим приложением!</string>

    <string name="about_app_good_habit_title">Заниматься спортом</string>
    <string name="about_app_good_habit_repeat_information">3 раза в неделю</string>
    <string name="about_app_good_habit_description">В здоровом теле здоровый дух</string>

    <string name="about_app_bad_habit_title">Не курить</string>
    <string name="about_app_bad_habit_repeat_information">Никогда</string>
    <string name="about_app_bad_habit_description" translatable="false">Курить - здоровью вредить</string>

    <string name="bottom_sheet_title">Фильтры</string>
    <string name="bottom_sheet_priority_title">Приоритет</string>
    <string name="bottom_sheet_color_title">Цвет</string>
    <string name="sort_by_priority_ascending">Сначала менее важные</string>
    <string name="sort_by_priority_descending">Сначала более важные</string>
    <string name="sort_by_creation_date_ascending">Сначала старые</string>
    <string name="sort_by_creation_date_descending">Сначала новые</string>

    <string name="gradient_color1">Rainbow Bright</string>
    <string name="gradient_color2">Deep Water</string>
    <string name="gradient_color3">Valley of Glaciers</string>
    <string name="gradient_color4">Kings of Sea</string>
    <string name="gradient_color5">Azure Tide</string>
    <string name="gradient_color6">Stamp Pad Green</string>
    <string name="gradient_color7">Laurel Wreath</string>
    <string name="gradient_color8">Green Goddess</string>
    <string name="gradient_color9">Death Guard</string>
    <string name="gradient_color10">Savannah Grass</string>
    <string name="gradient_color11">Highlight Gold</string>
    <string name="gradient_color12">Cameleer</string>
    <string name="gradient_color13">Golden Nugget</string>
    <string name="gradient_color14">Flaming Torch</string>
    <string name="gradient_color15">Terracotta</string>
    <string name="gradient_color16">Orange Vermilion</string>
</resources>