<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".EditHabitActivity"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/edit_habit_top_margin"
            android:layout_marginHorizontal="@dimen/edit_habit_horizontal_margin">

            <ImageButton android:id="@+id/close_button"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/edit_habit_icon_width"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/edit_habit_cancel_icon"
                android:contentDescription="@string/edit_habit_exit_button" />

            <Button android:id="@+id/save_habit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@color/dark_blue"
                android:text="@string/edit_habit_save_button"
                android:textAppearance="@style/Text.MainText.Bold"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text.LargeText"
            android:layout_marginBottom="@dimen/edit_habit_section_vertical_margin"
            android:layout_marginStart="@dimen/edit_habit_no_icon_section_start_margin"
            android:layout_marginEnd="@dimen/edit_habit_horizontal_margin"
            android:hint="@string/edit_habit_title_hint"
            android:inputType="text"
            android:background="@null"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/title_is_required_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_habit_no_icon_section_start_margin"
            android:text="@string/edit_habit_title_required"
            android:textColor="@color/red"
            android:textAppearance="@style/Text.ExtraSmallText"
            android:visibility="gone"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginVertical="@dimen/edit_habit_section_vertical_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/edit_habit_section_vertical_margin"
            android:layout_marginHorizontal="@dimen/edit_habit_horizontal_margin">

            <ImageView
                android:layout_width="@dimen/edit_habit_icon_width"
                android:layout_height="@dimen/edit_habit_icon_extended_height"
                android:src="@drawable/edit_habit_type_icon"
                android:layout_marginEnd="@dimen/edit_habit_horizontal_margin"
                android:contentDescription="@string/edit_habit_type_section_icon" />

            <RadioGroup
                android:id="@+id/type_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/good_habit_button">

                <RadioButton
                    android:id="@+id/bad_habit_button"
                    style="@style/RadioButton"
                    android:text="@string/bad_habit"
                    android:buttonTint="@color/red"/>

                <RadioButton android:id="@+id/good_habit_button"
                    style="@style/RadioButton"
                    android:text="@string/good_habit"
                    android:buttonTint="@color/green"/>
            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginVertical="@dimen/edit_habit_section_vertical_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/edit_habit_section_vertical_margin"
            android:layout_marginHorizontal="@dimen/edit_habit_horizontal_margin">

            <ImageView
                android:layout_width="@dimen/edit_habit_icon_width"
                android:layout_height="@dimen/edit_habit_icon_extended_height"
                android:src="@drawable/edit_habit_priority_icon"
                android:layout_marginEnd="@dimen/edit_habit_icon_margin"
                android:contentDescription="@string/edit_habit_priority_section_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edit_habit_spinner_height"
                android:background="@drawable/spinner_border"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/priority_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:spinnerMode="dropdown"
                    android:textAppearance="@style/Text.MainText"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/spinner_drop_down_arrow"
                    android:contentDescription="@string/edit_habit_arrow_drop_down_icon" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginVertical="@dimen/edit_habit_section_vertical_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/edit_habit_section_vertical_margin"
            android:layout_marginHorizontal="@dimen/edit_habit_horizontal_margin">

            <ImageView
                android:layout_width="@dimen/edit_habit_icon_width"
                android:layout_height="@dimen/edit_habit_icon_extended_height"
                android:src="@drawable/repeat_icon"
                android:layout_marginEnd="@dimen/edit_habit_icon_margin"
                android:contentDescription="@string/edit_habit_repeat_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/repeat_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_habit_repeat_text"
                    android:textAppearance="@style/Text.MainText"/>

                <EditText
                    android:id="@+id/repetition_times_edit_text"
                    android:layout_width="@dimen/edit_habit_input_size"
                    android:layout_height="@dimen/edit_habit_input_size"
                    android:inputType="number"
                    android:textAppearance="@style/Text.MainText"
                    android:text="@string/edit_habit_repeat_times_default_value"
                    android:textAlignment="center"
                    android:background="@drawable/spinner_border"
                    android:layout_marginHorizontal="@dimen/edit_habit_repeat_inputs_margin"
                    android:importantForAutofill="no"/>

                <TextView
                    android:id="@+id/repeat_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_habit_times_default_value"
                    android:textAppearance="@style/Text.MainText"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/edit_habit_spinner_height"
                    android:background="@drawable/spinner_border"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="@dimen/edit_habit_repeat_inputs_margin">

                    <Spinner
                        android:id="@+id/repetition_period_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:spinnerMode="dropdown"
                        android:textAppearance="@style/Text.MainText"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/spinner_drop_down_arrow"
                        android:contentDescription="@string/edit_habit_arrow_drop_down_icon" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginVertical="@dimen/edit_habit_section_vertical_margin"/>

        <TextView android:id="@+id/color_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/edit_habit_section_vertical_margin"
            android:layout_marginHorizontal="@dimen/edit_habit_horizontal_margin"
            android:textAppearance="@style/Text.MainText"
            android:text="@string/edit_habit_color_default_value"
            app:drawableLeftCompat="@drawable/edit_habit_color_icon_with_margin"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginVertical="@dimen/edit_habit_section_vertical_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/edit_habit_section_vertical_margin"
            android:layout_marginHorizontal="@dimen/edit_habit_horizontal_margin">

            <ImageView
                android:layout_width="@dimen/edit_habit_icon_width"
                android:layout_height="@dimen/edit_habit_icon_default_height"
                android:src="@drawable/edit_habit_description_icon"
                android:layout_marginEnd="@dimen/edit_habit_icon_margin"
                android:contentDescription="@string/edit_habit_description_icon" />

            <EditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_habit_description_hint"
                android:textAppearance="@style/Text.MainText"
                android:background="@null"
                android:inputType="text"
                android:importantForAutofill="no" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
